--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 </div> <!-- end of col -->
                 <div class="col-lg-4">
                     <div class="text-container second">
-                        <div class="time">Nov 2022 - PRESENT</div>
+                        <div class="time">Nov 2022 - June 2023</div>
                         <h6>Associate Software Developer</h6>
                         <p>Yespeal Technologies Pvt Ltd.</p>
                         <div class="time">Oct 2022 - Nov 2022</div>
